src/app/features/pokemon-build/pokemon-moves-mobile/pokemon-moves-mobile.component.scss
.edit-moves {
  display: grid;
  column-gap: 2em;
  row-gap: 0.8em;
  grid-template-columns: 1fr 1fr 1fr;
  padding: 0 1em;
}

.no-edit-moves {
  padding: 0 0.2em;
}

.chips-row {
  display: flex;
  align-items: center;
  flex-wrap: nowrap;
  gap: 0.5em;

  mat-chip-listbox {
    flex: 1 1 0;
    min-width: 0;
  }
}

.edit-button,
.save-button {
  display: flex;
  align-items: center;
  cursor: pointer;
  font-size: 12px;
  padding-top: 0.4em;
  flex: 0 0 auto;
}

.edit-icon {
  font-size: 18px;
  margin-top: 2px;
}

.close-button {
  margin-left: auto;
  font-size: inherit;
  padding-top: 0;

  .edit-icon {
    font-size: 24px;
    margin-top: 0;
  }
}

.hits-input {
  width: 45%;
  margin-left: auto;
}

.check-input-section-input {
  margin-top: 0.2em;
  margin-left: -0.5em;
}

.hits-input-only {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  margin-top: 0.8em;
  width: 100%;

  app-multi-hit-combo-box {
    width: 45%;
  }
}

::ng-deep .mat-mdc-standard-chip {
  min-height: 28px !important;

  .mdc-evolution-chip__graphic {
    display: none !important;
  }

  .mdc-evolution-chip__text-label {
    font-size: 11px !important;
  }
}

